# rua_v2_assistant

./: .env  .gitignore  compo.ipynb  features.txt  main.py  performance_report.txt  pyproject.toml  requirements.txt  requirements_22.txt  rua_memory.json  template.py  test_memory_retention_report.txt  to_be_added_(skills).txt  vosk_setup.py
research/: 01_wake_word.ipynb  02_stt_streaming.ipynb  03_llm_routing.ipynb  04_tts_precision.ipynb  hybrid_llm_brain.ipynb  memory_management.ipynb  rua_memory.json  rua_multi_user_memory.json  rua_research_memory.json  single_user_personality.ipynb  test.ipynb  test_tts.ipynb
rua_memory/: user_data.json
rua_memory/chroma_db/: chroma.sqlite3
rua_memory/conversation_data/: 2026-03-20.json  2026-03-22.json  2026-03-26.json  2026-03-27.json
rua_project/: diagnose_memory.py  diagnostic_test.py  main.py  test_memory_retention.py  utils.py  utils_2.py
rua_project/modules/: brain.py  ear.py  memory.py  voice.py  wake_word.py
