[project]
name = "rua-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.5",
    "deepgram-sdk>=6.0.1",
    "edge-tts>=7.2.8",
    "elevenlabs>=2.40.0",
    "faster-whisper>=1.2.1",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "openwakeword>=0.4.0",
    "pvporcupine>=4.0.2",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "pywhatkit>=5.4",
    "requests>=2.33.0",
    "schedule>=1.2.2",
    "sentence-transformers>=5.3.0",
    "speechrecognition>=3.15.2",
    "spotipy>=2.26.0",
    "vosk>=0.3.45",
]
