[project]
name = "rua-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "openwakeword>=0.4.0",
    "protobuf==3.20.3",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "speechrecognition>=3.15.2",
]
